--- a/DoctoDom/DoctoDom.csproj
+++ b/DoctoDom/DoctoDom.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Models\Specialties.cs" />
     <Compile Include="Helpers\UserType.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Rules\SpecialtiesRule.cs" />
     <Compile Include="UI\frmCitas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -159,7 +160,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Image\" />
-    <Folder Include="Rules\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
